--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.1",
